; ModuleID = '/home/carl/AnghaBench/tig/src/extr_tig.c_hangup_children.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_tig.c_hangup_children.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGHUP = common dso_local global i32 0, align 4
@SIG_IGN = common dso_local global i32 0, align 4
@SIG_ERR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hangup_children() #0 {
  %1 = load i32, i32* @SIGHUP, align 4
  %2 = load i32, i32* @SIG_IGN, align 4
  %3 = call i64 @signal(i32 %1, i32 %2)
  %4 = load i64, i64* @SIG_ERR, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  br label %11

7:                                                ; preds = %0
  %8 = call i32 (...) @getpid()
  %9 = load i32, i32* @SIGHUP, align 4
  %10 = call i32 @killpg(i32 %8, i32 %9)
  br label %11

11:                                               ; preds = %7, %6
  ret void
}

declare dso_local i64 @signal(i32, i32) #1

declare dso_local i32 @killpg(i32, i32) #1

declare dso_local i32 @getpid(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
